--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,6 @@
 }
 
 .logo{
-    margin-left: 20px;
     margin-top: -45px;
     position: relative;
 }
@@ -18,7 +17,8 @@
 .logo img {
     height: 200px;
     width: 200px;
-    position: absolute;
+    margin-left: -10%;
+    position: fixed;
 }
 
 .navigation{
@@ -31,6 +31,8 @@
     padding: 0;
     top: 0;
     z-index: 500;
+    left: 0;
+    text-align: center;
 }
 
 .ui-menu-color-about{
@@ -61,7 +63,6 @@
     border-radius: 50%;
     padding: 12px 0px;
     color: #fff;
-    text-align: center;
     white-space: nowrap;
     position: relative;
     margin-top: 10px;
@@ -396,10 +397,6 @@ button[type="submit"] {
     color: #fafafa;
     background: #8f8f8f;
     margin-top:10px;
-    transition: all .35s ease-in-out;
-    -moz-transition: all .35s ease-in-out;
-    -webkit-transition: all .35s ease-in-out;
-    -o-transition: all .35s ease-in-out;
     }    
 
 .social-links li a i:hover {
